tests/errors/compiler/not_point_string_in_stanfunc/test.c
void main()
{
	char a[1];
	char b[1];
	strcpy(a, b);
}
